<resources>

    <string name="dont_connection">Mất kết nối</string>

    <string name="app_name">Vidu2</string>
    <string name="confirm_phone">XÁC NHẬN THÔNG TIN SỐ ĐIỆN THOẠI</string>
    <string name="notical_confirm">Chúc tối đã gửi mã xác nhận đến số điện thoại của bạn!</string>
    <string name="turn_phone">để kích hoạt tài khoản của bạn</string>
    <string name="cencel">Hủy</string>
    <string name="accept">Đồng ý</string>
    <string name="continue_">Tiếp tục > </string>
    <string name="login">Đăng nhập ></string>
    <string name="passw">Mật khẩu</string>
    <string name="tab_select_number">Vui lòng nhập số điện thoại của bạn để đăng nhập hoặc đăn ký mới</string>
    <string name="notical_signin">Vui lòng nhập và xác nhận lại mật khẩu của bạn</string>
    <string name="sendcode">Một mã xác nhận đã được gửi tới số điện thoại</string>
    <string name="put_code">Để hoàn thành xác minh số điện thoại, vui lòng nhập mã 4 chữ số.</string>
    <string name="code_verification">Mã xác minh</string>
    <string name="forget_pass">Quên mật khẩu</string>
    <string name="reset_pass">Yêu cầu lấy lại mật khẩu</string>
    <string name="sure_pass">Bạn có chắc muốn restart mật khẩu</string>
    <string name="noticate_reset">Chúng tôi đã gửi lại mật khẩu cho bạn yêu cầu kiểm tra mail lấy mật khẩu và đăng nhập lại</string>
    <string name="change_your_pass">Thay đổi mật khẩu của bạn</string>
    <string name="error_password">Mật khẩu không hợp lệ vui lòng kiểm tra lại</string>
    <string name="title_error_pass">LỖI</string>
    <string name="code_error">Đã xảy ra lỗi vui lòng kiểm tra lại</string>
    <string name="success">Xong</string>
    <string name="changepass_success">Đổi mật khẩu thành công</string>
    <string name="oild_pass">Nhập mật khẩu cũ hoặc mã xác nhận</string>
    <string name="new_pass">Nhập mật khẩu mới</string>
    <string name="new_pass_again">Nhập lại mật khẩu mới</string>
    <string name="sent_pass_again">Gửi lại mật khẩu</string>
    <string name="sent_code_again">Gủi lại mã</string>
    <string name="import_password">Nhập mật khẩu</string>
    <string name="phone_error">Số điện thoại không hợp lệ vui lòng kiểm tra lại</string>

    <!--sent to activity signin-->
    <string name="sentto_sign">Thông báo</string>
    <string name="body_sentto_signin">Tài khoản không tồn tại, chuyển qua trang đăng ký</string>

    <!--//menu main activity-->
    <string name="medical">Lịch khám</string>
    <string name="mother">Mẹ</string>
    <string name="baby">Bé</string>
    <string name="group">Hội nhóm</string>
    <string name="manger_accoumt">Tài khoản</string>

    <!--mom or doctor-->
    <string name="mom_or_doctor">mom</string>
    <string name="sentani_1">We carefully verify all banks before add them into the app</string>
    <string name="sentani_2">All hotels and hostel are sortels by hospitality rating</string>
    <string name="sentani_3">All hotels and hostel are sortels by hospitality rating2</string>
    <!-- listview dicimal-->
    <string name="time_dicimal">Giờ đến khám</string>
    <string name="name_doctor">Tên Bác sĩ</string>
    <string name="name_mombaby">Tên mẹ và bé</string>
    <string name="status_cus">Trạng thái</string>
    <string name="place_work">Nơi công tác</string>
    <string name="address">Địa chỉ</string>
    <string name="contact">Liên hệ</string>
    <string name="manage_file">Quản lý hồ sơ</string>
    <string name="create_file">Tạo hồ sơ</string>
    <string name="update_file">Chỉnh sửa hồ sơ</string>
    <string name="update_file_button">Lưu</string>

    <string name="relationship">Mối quan hệ</string>
    <string name="bucking">Đặt lịch</string>
    <string name="no_file_mom">Bạn chưa có hồ sơ khám vui lòng tạo hồ sơ </string>
    <string name="Ok">OK</string>
    <string name="goto_bucking">Tiến hành đặt hồ sơ cho: </string>
    <string name="dialog_logout">Bạn có muốn đăng xuất ?</string>
    <!--//shedule information detail-->
    <string name="c0">Ngày xem lịch</string>
    <string name="c1">Số thứ tự</string>
    <string name="c2">Mã bệnh viện</string>
    <string name="c3">Mã bác sĩ</string>
    <string name="c4">Tên bác sĩ</string>
    <string name="c5">Mã khách hàng</string>
    <string name="c6">ID của mẹ và bé</string>
    <string name="c7">Tên mẹ hoặc bé</string>
    <string name="c8">Ngày đặt lịch</string>
    <string name="c9">Giờ đặt khám</string>
    <string name="c10">Giờ khám dự kiến</string>
    <string name="c11">Trạng thái</string>
    <string name="c12">Tên trạng thái</string>
    <string name="information_customer">Chỉnh sửa thông tin người dùng</string>
    <!-- .......................................... -->
    <!--filter theo trạng thái-->
    <string name="wait">N</string>
    <string name="succsess_bucker">Y</string>
    <string name="cancel_buker">D</string>
    <string name="cancel_bucker_system">C</string>


    <!--//tra cứu lịch khám-->
    <string name="tatle_medical">Tra cứu lịch khám</string>

    <!--thay doi tai khoan-->
    <string name="change_account">Tài khoản của bạn có sự thay đổi vui lòng kiểm tra lại</string>

    <string name="country_prompt">Choose a country</string>

    <!--spinner giới tính và mối quan hệ-->
    <string-array name="relationship_arrays">
        <item>Tôi</item>
        <item>Vợ</item>
        <item>Con</item>
    </string-array>
    <string-array name="sex_arrays">
        <item>Nam</item>
        <item>Nữ</item>
        <item>Khác</item>
    </string-array>
    <string-array name="relationship_mom">
        <item>Vợ</item>
    </string-array>
    <string-array name="sex_mom">
        <item>Nữ</item>
    </string-array>

    <string-array name="relationship_baby">
        <item>Con</item>
    </string-array>

    <string name="wife">Vợ</string>
    <string name="me">Tôi</string>
    <!--hết filter -->

    <string name="title_activity_maps">Map</string>
</resources>
