<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="150dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/dark"
            android:textSize="16sp"
            android:gravity="center"
            android:text="@string/reset_pass"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="20dp"/>
        <TextView
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sure_pass"
            android:textSize="12sp"
            android:textColor="@color/dark"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btn_cancel_dialogres"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cencel"
                android:layout_weight="1"
                android:background="@color/brown"/>
            <Button
                android:id="@+id/btn_agree_dialogres"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/accept"
                android:layout_weight="1"
                android:background="@color/brown"/>
        </LinearLayout>


    </LinearLayout>

</LinearLayout>
