<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:orientation="vertical"
    android:paddingTop="20dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/dark"
            android:textSize="16sp"
            android:gravity="center"
            android:text="@string/title_error_pass"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"/>
        <TextView
            android:id="@+id/tv_error"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/error_password"
            android:textSize="14sp"
            android:textColor="@color/dark"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="15dp"/>
    </LinearLayout>
    <Button
        android:id="@+id/btn_cancel_error_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cencel"
        android:background="@drawable/shrap_dialog_confirmphone"/>

</LinearLayout>
