<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="160dp"
    android:orientation="vertical"
    android:paddingTop="20dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/dark"
            android:textSize="16sp"
            android:gravity="center"
            android:text="@string/reset_pass"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="20dp"/>
        <TextView
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/noticate_reset"
            android:textSize="12sp"
            android:textColor="@color/dark"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="10dp" />


    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/brown"/>
    <Button
        android:id="@+id/btn_iport_pass_restart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/import_password"
        android:textSize="15sp"
        android:background="@drawable/opaque_button"/>

</LinearLayout>
