<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <android.support.v7.widget.CardView
        android:id="@+id/ly_root"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#4c931a"
        android:layout_margin="2dp"
        app:cardCornerRadius="3dp">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@drawable/list_selector"
            android:paddingLeft="20dp"
            android:paddingTop="5dip"
            android:paddingBottom="5dip"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/text_bucker"
                    android:textSize="@dimen/text_size_card_list"
                    android:text="@string/time_dicimal"/>
                <TextView
                    android:id="@+id/time_sche"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/text_bucker1"
                    android:textSize="@dimen/text_size_card_list"
                    android:text=""/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_pading_card_buck"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="@dimen/text_size_card_list"
                    android:textColor="@color/text_bucker"
                    android:text="@string/name_doctor"/>
                <TextView
                    android:id="@+id/doctor_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/text_bucker1"
                    android:textSize="@dimen/text_size_card_list"
                    android:text=""/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_pading_card_buck"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/text_bucker"
                    android:textSize="@dimen/text_size_card_list"
                    android:text="@string/name_mombaby"/>
                <TextView
                    android:id="@+id/mom_baby_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/text_bucker1"
                    android:textSize="@dimen/text_size_card_list"
                    android:text=""/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/size_pading_card_buck"
                android:layout_marginBottom="5dip">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="@dimen/text_size_card_list"
                    android:textColor="@color/text_bucker"
                    android:text="@string/status_cus"/>
                <TextView
                    android:id="@+id/status"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/text_bucker1"
                    android:textSize="@dimen/text_size_card_list"
                    android:text=""/>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>

